@@ -37,6 +37,11 @@ public class TreeFeatGen extends AbstractFeatureGenerator implements Serializabl
 	}
 	
 	public static List<String> getFeatures(TreeX x, TreeY y) {
+//		System.out.println("Text : "+x.ta.getText());
+//		System.out.println("NodeList");
+//		for(Node node : y.equation.root.getLeaves()) {
+//			System.out.println(node+" "+node.getNodeListSpan()+" "+node.getCharSpan());
+//		}
 		List<String> features = new ArrayList<String>();
 		for(Node node : y.equation.root.getAllSubNodes()) {
 			if(node.children.size() == 2) {
@@ -51,19 +56,31 @@ public class TreeFeatGen extends AbstractFeatureGenerator implements Serializabl
 		if(node.children.size() == 0) {
 			System.err.println("Pair Features called with a leaf : expected non-leaf");
 		}
-		if(node.children.get(0).getCharSpan().getFirst() == -1 ||
-				node.children.get(1).getCharSpan().getFirst() == -1) {
-			features.addAll(getNonProjectiveFeatures(node.children.get(0), 
-					node.children.get(0), node.label, x));
-		} else {
+//		System.out.println("Pair features called with : "+node);
+		Node node1 = node.children.get(0);
+		Node node2 = node.children.get(1);
+		IntPair ip1 = node1.getNodeListSpan();
+		IntPair ip2 = node2.getNodeListSpan();
+		if(node1.children.size()==0 && node2.children.size()==0 && (!node1.projection || !node2.projection)) {
+//			System.out.println("Chosen non-projective");
+			features.addAll(getNonProjectiveFeatures(x, node));
+		} else if(ip1.getFirst()!=-1 && ip2.getFirst()!=-1 && 
+				(ip1.getSecond()+1==ip2.getFirst() || ip2.getSecond()+1==ip1.getFirst())) {
+//			System.out.println("Chosen projective");
 			features.addAll(getProjectiveFeatures(x, node));
 		}
 		return features;
 	}
 	
 	public static List<String> getProjectiveFeatures(TreeX x, Node node) {
+		List<String> features = new ArrayList<>();
 		IntPair ip1 = node.children.get(0).getNodeListSpan();
 		IntPair ip2 = node.children.get(1).getNodeListSpan();
+		if(Math.min(ip1.getSecond(), ip2.getSecond()) > Math.max(ip1.getFirst(), ip2.getFirst())) {
+			return features;
+		}
+//		System.out.println("NodeListSpan "+node.children.get(0)+" "+ip1);
+//		System.out.println("NodeListSpan "+node.children.get(1)+" "+ip2);
 		String prePhrase = "";
 		if(Math.min(ip1.getFirst(), ip2.getFirst())==0)  {
 			prePhrase = x.ta.getText().toLowerCase().substring(
@@ -85,86 +102,90 @@ public class TreeFeatGen extends AbstractFeatureGenerator implements Serializabl
 			QuantSpan qs = x.quantities.get(node.children.get(1).index);
 			leftToken = x.ta.getText().toLowerCase().substring(qs.start, qs.end);
 		}
-		String label = node.label;
-		if(ip1.getFirst() > ip2.getFirst() && node.label.endsWith("REV")) {
-			label = node.label.substring(0,3);
+		String op = node.label;
+		if(ip1.getFirst() > ip2.getFirst() && (node.label.equals("SUB") || node.label.equals("DIV"))) {
+			op += "_REV";
 		}
-		List<String> features = new ArrayList<>();
-		features.addAll(getRuleFeatures(prePhrase, midPhrase, leftToken, label));
+//		System.out.println("PrePhrase : "+prePhrase+" MidPhrase : "+midPhrase+" LeftToken : "+leftToken);
+		features.addAll(getRuleFeatures(prePhrase, midPhrase, leftToken, op));
+		
+
+		IntPair span1 = node.children.get(0).getCharSpan();
+		IntPair span2 = node.children.get(1).getCharSpan();
+		int min = x.ta.getTokenIdFromCharacterOffset(Math.min(span1.getFirst(), span2.getFirst()))+1;
+		int max = x.ta.getTokenIdFromCharacterOffset(Math.max(span1.getSecond(), span2.getSecond()))-1;
+		int left = x.ta.getTokenIdFromCharacterOffset(Math.min(span1.getSecond(), span2.getSecond()))-1;
+		int right = x.ta.getTokenIdFromCharacterOffset(Math.max(span1.getFirst(), span2.getFirst()))+1;
+		for(int i=min; i<=max; ++i) {
+			features.add("MidUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+op);
+		}
+		for(int i=min; i<=max-1; ++i) {
+			features.add("MidBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
+					x.ta.getToken(i+1).toLowerCase()+"_"+op);
+			features.add("MidLexPosBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
+					x.posTags.get(i+1).getLabel()+"_"+op);
+			features.add("MidPosLexBigram_"+x.posTags.get(i).getLabel()+"_"+
+					x.ta.getToken(i+1).toLowerCase()+"_"+op);
+		}
 		return features;
 	}
 	
 	// Only for combining leaves 
-	public static List<String> getNonProjectiveFeatures(Node leaf1, Node leaf2, String label, TreeX x) {
+	public static List<String> getNonProjectiveFeatures(TreeX x, Node node) {
+		Node leaf1 = node.children.get(0);
+		Node leaf2 = node.children.get(1);
 		if(leaf1.children.size() > 0 && leaf2.children.size() > 0) {
 			System.err.println("Non Projective Features called with a non-leaf : expected leaf");
 		}
 		List<String> features = new ArrayList<>();
-		IntPair ip1, ip2;
 		String prefix = "";
-		if(leaf1.label.equals("VAR")) {
-			prefix+="VAR";
-			ip1 = x.candidateVars.get(leaf1.index);
-		} else {
-			prefix+="NUM";
-			QuantSpan qs = x.quantities.get(leaf1.index);
-			ip1 = new IntPair(x.ta.getTokenIdFromCharacterOffset(qs.start), 
-					x.ta.getTokenIdFromCharacterOffset(qs.end));
-		}
-		if(leaf2.label.equals("VAR")) {
-			prefix+="VAR";
-			ip2 = x.candidateVars.get(leaf2.index);
-		} else {
-			prefix+="NUM";
-			QuantSpan qs = x.quantities.get(leaf2.index);
-			ip2 = new IntPair(x.ta.getTokenIdFromCharacterOffset(qs.start), 
-					x.ta.getTokenIdFromCharacterOffset(qs.end));
-		}
-		if(ip1.getFirst() > ip2.getFirst()) prefix += "REV";
-		if(ip1.getFirst() == ip2.getFirst() && ip1.getSecond() > ip2.getSecond()) prefix += "REV";
 		
-		int min = x.ta.getTokenIdFromCharacterOffset(leaf1.charIndex)+1;
-		int max = x.ta.getTokenIdFromCharacterOffset(leaf2.charIndex)-1;
-		int left = x.ta.getTokenIdFromCharacterOffset(leaf1.charIndex)-1;
-		int right = x.ta.getTokenIdFromCharacterOffset(leaf2.charIndex)+1;
-		for(int i=min; i<max; ++i) {
-			features.add(prefix+"_MidUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+label);
+		int min = x.ta.getTokenIdFromCharacterOffset(Math.min(leaf1.charIndex, leaf2.charIndex))+1;
+		int max = x.ta.getTokenIdFromCharacterOffset(Math.max(leaf1.charIndex, leaf2.charIndex))-1;
+		int left = x.ta.getTokenIdFromCharacterOffset(Math.min(leaf1.charIndex, leaf2.charIndex))-1;
+		int right = x.ta.getTokenIdFromCharacterOffset(Math.max(leaf1.charIndex, leaf2.charIndex))+1;
+		String op = node.label;
+		if(leaf1.charIndex > leaf2.charIndex && (node.label.equals("SUB") || node.label.equals("DIV"))) {
+			op += "_REV";
 		}
-		for(int i=min; i<max-1; ++i) {
-			features.add(prefix+"_MidBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
-					x.ta.getToken(i+1).toLowerCase()+"_"+label);
-			features.add(prefix+"_MidLexPosBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
-					x.posTags.get(i+1).getLabel()+"_"+label);
-			features.add(prefix+"_MidPosLexBigram_"+x.posTags.get(i).getLabel()+"_"+
-					x.ta.getToken(i+1).toLowerCase()+"_"+label);
-		}
-		for(int i=Math.max(0, left-2); i<left; ++i) {
-			features.add(prefix+"_LeftUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+label);
-			features.add(prefix+"_LeftBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
-					x.ta.getToken(i+1).toLowerCase()+"_"+label);
-		}
-		for(int i=min; i<Math.min(x.ta.size()-1, min+2); ++i) {
-			features.add(prefix+"_LeftRightUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+label);
-			features.add(prefix+"_LeftRightBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
-					x.ta.getToken(i+1).toLowerCase()+"_"+label);
-		}
-		for(int i=right; i<Math.min(x.ta.size()-1, right+2); ++i) {
-			features.add(prefix+"_RightUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+label);
-			features.add(prefix+"_RightBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
-					x.ta.getToken(i+1).toLowerCase()+"_"+label);
-		}
-		for(int i=Math.max(0, max-2); i<max; ++i) {
-			features.add(prefix+"_RightLeftUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+label);
-			features.add(prefix+"_RightLeftBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
-					x.ta.getToken(i+1).toLowerCase()+"_"+label);
-		}
-		if(prefix.contains("NUMNUM")) {
-			if(leaf1.value > leaf2.value) {
-				features.add(prefix+"_Desc"+"_"+label);
-			} else {
-				features.add(prefix+"_Asc"+"_"+label);
-			}
-		}
+//		for(int i=min; i<max; ++i) {
+//			features.add(prefix+"_MidUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+op);
+//		}
+//		for(int i=min; i<max-1; ++i) {
+//			features.add(prefix+"_MidBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
+//					x.ta.getToken(i+1).toLowerCase()+"_"+op);
+//			features.add(prefix+"_MidLexPosBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
+//					x.posTags.get(i+1).getLabel()+"_"+op);
+//			features.add(prefix+"_MidPosLexBigram_"+x.posTags.get(i).getLabel()+"_"+
+//					x.ta.getToken(i+1).toLowerCase()+"_"+op);
+//		}
+//		for(int i=Math.max(0, left-2); i<left; ++i) {
+//			features.add(prefix+"_LeftUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+op);
+//			features.add(prefix+"_LeftBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
+//					x.ta.getToken(i+1).toLowerCase()+"_"+op);
+//		}
+//		for(int i=min; i<Math.min(x.ta.size()-1, min+2); ++i) {
+//			features.add(prefix+"_LeftRightUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+op);
+//			features.add(prefix+"_LeftRightBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
+//					x.ta.getToken(i+1).toLowerCase()+"_"+op);
+//		}
+//		for(int i=right; i<Math.min(x.ta.size()-1, right+2); ++i) {
+//			features.add(prefix+"_RightUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+op);
+//			features.add(prefix+"_RightBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
+//					x.ta.getToken(i+1).toLowerCase()+"_"+op);
+//		}
+//		for(int i=Math.max(0, max-2); i<max; ++i) {
+//			features.add(prefix+"_RightLeftUnigram_"+x.ta.getToken(i).toLowerCase()+"_"+op);
+//			features.add(prefix+"_RightLeftBigram_"+x.ta.getToken(i).toLowerCase()+"_"+
+//					x.ta.getToken(i+1).toLowerCase()+"_"+op);
+//		}
+//		if(prefix.contains("NUMNUM")) {
+//			if(leaf1.value > leaf2.value) {
+//				features.add(prefix+"_Desc"+"_"+op);
+//			} else {
+//				features.add(prefix+"_Asc"+"_"+op);
+//			}
+//		}
 		return features;
 	}
 	
@@ -204,11 +225,12 @@ public class TreeFeatGen extends AbstractFeatureGenerator implements Serializabl
 		if(midPhrase.contains("as many")) {
 			features.add(operation+"_DIVREV_RULE");
 		}
+//		if(features.size() == 0) {
+//			String strArr[] = midPhrase.split(" ");
+//		}
+		
+		
 		return features;
-	}
-
-	public static void addFeature(String string, TreeY y, List<String> features) {
-		features.add(string+"_"+y);
 	}
 	
 }
